--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 15 16:33:25 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* src/storage_driver.c: fix a segfault, patch by Miloslav TrmaC
+
 Mon Dec 15 10:59:19 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/domain_conf.c: Unlock domain object after fetching
