--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Tue Dec 16 17:26:49 EST 2008 Cole Robinson <crobinso@redhat.com>
+
+	* src/qemu_driver.c: Sanitize qemu monitor reads.
+
 Mon Dec 15 21:05:56 CET 2008 Guido Günther <agx@sigxcpu.org>
 
 	Add virAsprintf as safer asprintf helper
