--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,17 @@
 Wed Dec 17 18:10:51 +0100 2008 Jim Meyering <meyering@redhat.com>
 
+	enforce the "include <config.h> first" rule
+	* qemud/Makefile.am: Ensure that the generated remote_protocol.c
+	includes <config.h> first.
+	* Makefile.maint (sc_require_config_h_first): New rule, so that
+	"make syntax-check" enforces this.
+	* .x-sc_require_config_h_first: New file.
+	* Makefile.am (.x-sc_require_config_h_first): Add it.
+	* qemud/remote_protocol.x: Don't include <config.h> here.
+	* qemud/remote_protocol.c: Regenerate.
+
+Wed Dec 17 18:10:51 +0100 2008 Jim Meyering <meyering@redhat.com>
+
 	let gcc's -Wformat do its job; avoid "make syntax-check" failure
 	* src/util.c (virAsprintf): Remove trailing space.
 	* src/util.h (virAsprintf): Use ATTRIBUTE_FORMAT.
