--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+Wed Dec 17 19:06:53 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	portability: don't include <endian.h> or <byteswap.h>
+	* src/storage_backend_fs.c: Don't include <endian.h> or <byteswap.h>.
+	(LV_BIG_ENDIAN, LV_LITTLE_ENDIAN): Define.
+	Use those instead of __BIG_ENDIAN and __LITTLE_ENDIAN.
+
 Wed Dec 17 18:03:39 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* qemud/qemud.c, src/util.c, tests/testutils.c: Remove use
