--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+Wed Dec 17 18:10:39 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Anonymous union fixes for non-GCC compilers (John Levon)
+	* domain_conf.c, qemu_conf.c, qemu_driver.c: Remove use
+	of anonymous union
+	* domain_conf.h: Give a name to the anonymous union for
+	host devices. Add 'dummy' field to avoid empty struct
+	* remote_internal.c: Remove gcc-ism in empty "x ? : y"
+
 Wed Dec 17 19:06:53 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	portability: don't include <endian.h> or <byteswap.h>
