--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Wed Dec 17 21:41:39 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	* src/libvirt_sym.version.in: Remove non-existant symbols
+	(John Levon)
+
 Wed Dec 17 21:35:39 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	Portability of ELF version script to Solaris (John Levon)
