--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 18 07:44:07 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	Makefile.maint: use $(srcdir), not $(top_srcdir)
+
 Wed Dec 17 21:49:39 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Fix unreachable return statement
