--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Thu Dec 18 07:47:58 +0100 2008 Jim Meyering <meyering@redhat.com>
+
+	docs/virsh.pod: typo fix
+
 Thu Dec 18 07:44:07 +0100 2008 Jim Meyering <meyering@redhat.com>
 
 	Makefile.maint: use $(srcdir), not $(top_srcdir)
