--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Thu Dec 18 12:18:58 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
+
+	Fix gcc-ism in python build (John Levon)
+	* acinclude.m4: Add -Wno-redundant-decls check for compiler
+	* python/Makefile.am: Remove hardcoded -Wno-redundant-decls
+
 Thu Dec 18 12:11:58 GMT 2008 Daniel P. Berrange <berrange@redhat.com>
 
 	* src/remote_internal.c: Don't free event after queueing it
