--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Mon Dec 22 13:54:30 CET 2008 Daniel Veillard <veillard@redhat.com>
+
+	* qemud/event.c qemud/mdns.c qemud/remote.c: switch other pieces
+	  of the daemon to the new logging infrastructure
+
 Mon Dec 22 13:51:48 CET 2008 Daniel Veillard <veillard@redhat.com>
 
 	* qemud/qemud.c qemud/qemud.h: replace the daemon old logging
