--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+Mon Jan  5 09:11:21 CET 2009 Jim Meyering <meyering@redhat.com>
+
+	HACKING: mention bool and other scalar types, const-correctness
+
 Fri Dec 26 14:22:04 CET 2008 Guido Günther <agx@sigxcpu.org>
 
 	document vnc's keymap attribute
