--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 Mon Jan  5 09:11:21 CET 2009 Jim Meyering <meyering@redhat.com>
 
+	mark a few diagnostics for translation
+	* src/xen_inotify.c (xenInotifyXendDomainsDirLookup): Mark a diagnostic.
+	(xenInotifyXendDomainsDirRemoveEntry, xenInotifyOpen): Likewise.
+
 	HACKING: mention bool and other scalar types, const-correctness
 
 Fri Dec 26 14:22:04 CET 2008 Guido Günther <agx@sigxcpu.org>
